Fixed whitespace that shows up in dark mode

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -142,6 +142,9 @@ body {
 /* Dark Theme */
 
 .dark, .dark html {
+    // position: fixed;
+    height: 100%;
+    width: 100%;
     color: #ffffff;
     background: #424242;
     // font: 400 16px -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
